# hera-backend/openapi.yaml
@@ -137,6 +137,24 @@ paths:
               schema:
                 $ref: '#/components/schemas/BetSessionResponseBody'
       tags: *ref_1
+  /api/v1/session/settle:
+    post:
+      operationId: SessionController_settleSessionReplay
+      parameters: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SettleSessionReplayRequestBody'
+      responses:
+        '200':
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SettleSessionReplayResponseBody'
+      tags: *ref_1
 info:
   title: Hera API
   description: APIs for interacting with Hera.
@@ -382,6 +400,23 @@ components:
         - sessionToken
         - rawAmount
     BetSessionResponseBody:
+      type: object
+      properties:
+        success:
+          type: boolean
+      required:
+        - success
+    SettleSessionReplayRequestBody:
+      type: object
+      properties:
+        sessionId:
+          type: string
+        userId:
+          type: string
+      required:
+        - sessionId
+        - userId
+    SettleSessionReplayResponseBody:
       type: object
       properties:
         success:
